--- a/src/app/level/level.scss
+++ b/src/app/level/level.scss
@@ -1,5 +1,5 @@
 .level{
-    background: url('../../assets/bg-layer.png');
+    background: url('../../assets/photos/bg-layer.png');
     min-height: 100vh;
     background-position: bottom;  
     background-repeat: no-repeat; 
