--- a/src/app/login/login.scss
+++ b/src/app/login/login.scss
@@ -1,5 +1,5 @@
 .login-bg{
-  background: url('../../assets/bg-layer.png');
+  background: url('../../assets/photos/bg-layer.png');
   min-height: 100vh;
   background-position: center;  
   background-repeat: no-repeat; 
