--- a/src/app/playground/playground.scss
+++ b/src/app/playground/playground.scss
@@ -1,5 +1,5 @@
 .playground{
-    background: url('../../assets/bg7.png');
+    background: url('../../assets/photos/bg7.png');
     min-height: 100vh;
     background-position: bottom;  
     background-repeat: no-repeat; 
