--- a/src/app/changebg/changeBg.scss
+++ b/src/app/changebg/changeBg.scss
@@ -1,5 +1,5 @@
 .change-bg {
-  background: url("../../assets/bg-layer.png");
+  background: url("../../assets/photos/bg-layer.png");
   min-height: 100vh;
   background-position: bottom;
   background-repeat: no-repeat;
