--- a/src/app/prizes/prizes.scss
+++ b/src/app/prizes/prizes.scss
@@ -1,5 +1,5 @@
 .prizes {
-  background: url("../../assets/bg-layer.png");
+  background: url("../../assets/photos/bg-layer.png");
   min-height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
@@ -46,7 +46,8 @@ padding: 20px 15px;
 
   }
 }
-.visa , .paypal{
+.payment-method{
+  .visa , .paypal{
     width: 108px;
 height: 25px;
 border-radius: 15px;
@@ -69,4 +70,5 @@ height: 13.26px;
 
 }
 
+}
 }
