--- a/src/app/register/register.scss
+++ b/src/app/register/register.scss
@@ -1,5 +1,5 @@
 .register-bg{
-    background: url('../../assets/bg-layer.png');
+    background: url('../../assets/photos/bg-layer.png');
     min-height: 100vh;
     background-position: center;  
     background-repeat: no-repeat; 
