--- a/src/app/settings/settings.scss
+++ b/src/app/settings/settings.scss
@@ -1,6 +1,6 @@
 
 .settings{
-     background: url("../../assets/bg-layer.png");
+     background: url("../../assets/photos/bg-layer.png");
      min-height: 100vh;
      background-position: bottom;
      background-repeat: no-repeat;
