--- a/src/app/user/user.scss
+++ b/src/app/user/user.scss
@@ -1,5 +1,5 @@
 .user {
-    background: url("../../assets/bg-layer.png");
+    background: url("../../assets/photos/bg-layer.png");
     min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
