--- a/src/app/user/user.scss
+++ b/src/app/user/user.scss
@@ -1,19 +1,19 @@
 .user {
-    background: url("../../assets/bg-layer.png");
-    min-height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background: url("../../assets/bg-layer.png");
+  min-height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   .user-info {
-     img {
+    img {
       width: 112px;
       height: 101px;
-
-
     }
   }
- 
+}
 
-  }
- 
-  
+
+.arrow:hover{
+  transform: scale(1.1);
+  transition: .3s;
+}
