home page css modifing

--- a/src/components/home/homepage.scss
+++ b/src/components/home/homepage.scss
@@ -92,7 +92,7 @@
       width: 46px;
     }
   }
-  .wallet {
+  .home-page-main-container {
     background: url("../../assets/photos/wallet-bg.png");
     background-position: center;
     background-repeat: no-repeat;
@@ -101,7 +101,7 @@
     border-radius: 20px;
     height: 200px;
 
-    .wallet-layer {
+    .home-page-main-container-layer {
       background: linear-gradient(
         90deg,
         rgba(0, 0, 0, 0.9) 10.6%,
