--- a/src/app/login/login.scss
+++ b/src/app/login/login.scss
@@ -38,5 +38,8 @@ flex-direction: column;
   display: block;
    
 }
-
-
+.facebook-btn:focus , .google-btn:focus{
+  box-shadow: none !important;
+  outline: 0 !important;
+  border-color: transparent !important;
+}
