--- a/src/app/message/message.scss
+++ b/src/app/message/message.scss
@@ -7,7 +7,7 @@
   direction: rtl; 
   text-align: right; 
   .layer {
-    background: url("../../assets/bgLayer.png");
+    background: url("../../assets/photos/bgLayer.png");
     min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
