--- a/src/app/message/message.scss
+++ b/src/app/message/message.scss
@@ -13,7 +13,7 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
-}
+
 .message-title {
   display: flex;
   flex-direction: column;
@@ -59,8 +59,10 @@ h1 {
 .input-with-icon input,
 .input-with-icon textarea {
   background: #d9d9d9a3;
+  box-shadow: 0px 4px 4px 0px #FFFFFF40;
   border: none;
   padding-right: 40px;
+
 }
 
 .input-with-icon .icon {
@@ -93,4 +95,40 @@ h1 {
   background: linear-gradient(180deg, #9723ef 0%, #f04b9c 100%);
   border: none;
   border-radius: 50px;
+}
+.white-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff44;
+  border-radius: 50px;
+  width: 155px;
+  padding-right: 5px;
+  gap: 7px;
+  position: relative;
+ 
+}
+.whatsApp-container
+
+   {
+ 
+ 
+    color: white;
+    width: 240px;
+    height: 40px; 
+    h5 {
+      margin-left: 25px;
+      margin-bottom: 5px;
+    }
+    .whatsApp {
+      position: absolute;
+      left: 1px;
+      top: -1px;
+      // border: 1px solid white;
+      border-radius: 50px;
+      height: 41px;
+      width: 43px;
+    }
+ 
+  }   
 }
