--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,8 +24,9 @@
   text-align: left; 
 }
 
-a {
+.link {
   text-decoration: none;
+  color: black !important;
 }
 .red-color{
   color: var(--red-color) !important;
