--- a/src/components/home/homepage.scss
+++ b/src/components/home/homepage.scss
@@ -1,7 +1,7 @@
 .home-page {
   position: relative;
   min-height: 100vh;
-  overflow: hidden; /* Ensure that the blur layer doesn't overflow */
+  overflow: hidden; 
   background: url("../../assets/photos/home.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -24,7 +24,7 @@
   }
 
   header {
-    height: 81px;
+    height:80px;
     position: relative;
     z-index: 1;
   }
@@ -34,8 +34,8 @@
     justify-content: center;
     background-color: #ffffff44;
     border-radius: 50px;
-    width: 155px;
-    padding-right: 5px;
+    width: 156px;
+    padding-right: 15px;
     gap: 7px;
     position: relative;
     .userImage {
@@ -74,26 +74,26 @@
  
   }    
 
+    .playNow{    background-image:
+      linear-gradient(89.65deg, rgba(4, 4, 4, 0.75) 21.87%, rgba(61, 30, 114, 0) 96.35%),
+ 
+       url("../../assets/photos/playNow-bgg.png"); }  
+    .playWith{    background-image:
+     linear-gradient(89.65deg, rgba(4, 4, 4, 0.75) 21.87%, rgba(61, 30, 114, 0) 96.35%),
 
-    .home-page-main-container-layer { 
-
-      // background: linear-gradient(
-      //   90deg,
-      //   rgba(0, 0, 0, 0.9) 10.6%,
-      //   rgba(0, 0, 0, 0) 100%
-      // );
-
-    .playNow{  background: url("../../assets/photos/playNow-bgg.png");}  
-    .playWith{  background: url("../../assets/photos/playWith-bgg.png"); }   
+      url("../../assets/photos/playWith-bgg.png"); }   
     .wallet{ background: url("../../assets/photos/wallet-bg.png"); }   
     .shareGame{background: url("../../assets/photos/shareGame-bg.png");}
+
+    .home-page-main-container-layer { 
+      
 
     .home-page-main-container {
     box-shadow: 0px 4px 16px -8px #00000040;
      background-repeat: no-repeat;
     background-size: cover;
      border-radius: 20px;
-    height: 200px;
+    height: 196px;
 
    img{ 
     width: 248px;
@@ -120,6 +120,8 @@
   
   }
   @media only screen and (max-width: 600px) {
+
+
     .home-page-main-container {
       padding: 56px;
      img{ 
@@ -130,6 +132,7 @@
    
     }
   }
+  
   
   // .horizontal-scroll-container {
   //   .row {
