--- a/src/components/home/homepage.scss
+++ b/src/components/home/homepage.scss
@@ -74,10 +74,10 @@
  
   }    
 
-    .playNow{    background-image:
-      linear-gradient(89.65deg, rgba(4, 4, 4, 0.75) 21.87%, rgba(61, 30, 114, 0) 96.35%),
+    .playNow{    background-image: url("../../assets/photos/playNow-bgg.png"),
+      linear-gradient(89.65deg, rgba(4, 4, 4, 0.75) 21.87%, rgba(61, 30, 114, 0) 96.35%)
  
-       url("../../assets/photos/playNow-bgg.png"); }  
+       }  
     .playWith{    background-image:
      linear-gradient(89.65deg, rgba(4, 4, 4, 0.75) 21.87%, rgba(61, 30, 114, 0) 96.35%),
 
