--- a/src/app/card/card.scss
+++ b/src/app/card/card.scss
@@ -1,11 +1,11 @@
-.prizes {
+.card-page {
   background: url("../../assets/photos/bg-layer.png");
   min-height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-.prize {
+
+.ticket {
   background-color: var(--purple-color) !important;
   border-radius: 15px;
   display: flex;
@@ -26,25 +26,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    .money-img {
-      width: 100%;
-      width: 57px;
-height: 57px;
-    }
+ 
   }
   .ticket-img{
     width: 56px;
 height: 56px;
 
   }
-  .xo-img{
-    width: 43px;
-height: 20px;
-background-color: var(--purple-color) !important;
-border-radius: 50px;
-padding: 20px 15px;
-
-  }
+ 
 }
 .payment-method{
   .visa , .paypal{
@@ -70,5 +59,6 @@ height: 13.26px;
 
 }
 
+}
 }
 }
