--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
   --baby-blue:#4DE9F5;
   --dark-blue-color:#000029;
 }
-
+ 
 * {
   padding: 0;
   margin: 0;
@@ -114,4 +114,23 @@
 
   body{
     max-height: 100vh !important;
+  }
+  .user-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff44;
+    border-radius: 50px;
+    width: 153px;
+    height: 35px;
+    padding-right: 15px;
+    gap: 7px;
+    position: relative;
+    .userImage {
+      border: 1px solid white;
+      border-radius: 50px;
+      background: white;
+    height: 35px;
+
+    }
   }
