--- a/src/components/home/homepage.scss
+++ b/src/components/home/homepage.scss
@@ -1,7 +1,7 @@
 .home-page {
-   position: relative;
+  position: relative;
   min-height: 100vh;
-  overflow: hidden; 
+  overflow: hidden;
   background: url("../../assets/photos/home.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -24,42 +24,37 @@
   }
 
   header {
-    height:80px;
+    height: 80px;
     position: relative;
     z-index: 1;
   }
-  .white-container {
+  .ticket-container {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #ffffff44;
     border-radius: 50px;
-    width: 156px;
+    width: 153px;
+    height: 35px;
     padding-right: 15px;
     gap: 7px;
     position: relative;
-    .userImage {
-      border: 1px solid white;
-      border-radius: 50px;
-      background: white;
-    }
   }
   .high-z-index {
     position: relative;
     z-index: 1;
   }
 
-  .ticket-prize
-   {
+  .ticket-prize {
+    color: white;
+    width: 124px;
+    height: 41px;
+    margin-right: 20px;
+
     h5 {
       margin-left: 25px;
       margin-bottom: 5px;
     }
-    color: white;
-    width: 124px;
-    height: 41px;
-
-    margin-right: 20px;
 
     .ticket {
       position: absolute;
@@ -71,69 +66,72 @@
       height: 41px;
       width: 43px;
     }
- 
-  }    
+  }
 
-    .playNow{    background-image: url("../../assets/photos/playNow-bgg.png"),
-      linear-gradient(89.65deg, rgba(4, 4, 4, 0.75) 21.87%, rgba(61, 30, 114, 0) 96.35%)
- 
-       }  
-    .playWith{    background-image:
-     linear-gradient(89.65deg, rgba(4, 4, 4, 0.75) 21.87%, rgba(61, 30, 114, 0) 96.35%),
+  .playNow {
+    background-image: url("../../assets/photos/playNow-bgg.png"),
+      linear-gradient(
+        89.65deg,
+        rgba(4, 4, 4, 0.75) 21.87%,
+        rgba(61, 30, 114, 0) 96.35%
+      );
+  }
+  .playWith {
+    background-image: linear-gradient(
+        89.65deg,
+        rgba(4, 4, 4, 0.75) 21.87%,
+        rgba(61, 30, 114, 0) 96.35%
+      ),
+      url("../../assets/photos/playWith-bgg.png");
+  }
+  .wallet {
+    background: url("../../assets/photos/wallet-bg.png");
+  }
+  .shareGame {
+    background: url("../../assets/photos/shareGame-bg.png");
+  }
 
-      url("../../assets/photos/playWith-bgg.png"); }   
-    .wallet{ background: url("../../assets/photos/wallet-bg.png"); }   
-    .shareGame{background: url("../../assets/photos/shareGame-bg.png");}
-
-    .home-page-main-container-layer { 
-      
-
+  .home-page-main-container-layer {
     .home-page-main-container {
-    box-shadow: 0px 4px 16px -8px #00000040;
-     background-repeat: no-repeat;
-    background-size: cover;
-     border-radius: 20px;
-    height: 196px;
+      box-shadow: 0px 4px 16px -8px #00000040;
+      background-repeat: no-repeat;
+      background-size: cover;
+      border-radius: 20px;
+      height: 196px;
 
-   img{ 
-    width: 248px;
+      img {
+        width: 248px;
       }
-    
     }
-    .text-play-container{
+    .text-play-container {
       display: flex;
       flex-direction: column;
       align-items: end;
       gap: 30px;
-        .arrow{
-      background: #1E1F24;
-      width: 48px;
-      height: 48px;
-      border-radius: 8px;
-      display: flex;
-      align-items: center;
-      justify-content: center;    
-      font-size: 30px;
-      font-weight: bold;
+      .arrow {
+        background: #1e1f24;
+        width: 48px;
+        height: 48px;
+        border-radius: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 30px;
+        font-weight: bold;
+      }
     }
-    }
-  
   }
   @media only screen and (max-width: 600px) {
-
-
     .home-page-main-container {
       padding: 56px;
-     img{ 
+      img {
         position: relative;
         right: -67px;
         width: 170px;
-        }
-   
+      }
     }
   }
-  
-  
+
   // .horizontal-scroll-container {
   //   .row {
   //     display: flex;
@@ -150,4 +148,3 @@
   //   display: none;
   // }
 }
-
