--- a/src/components/loading/loading.scss
+++ b/src/components/loading/loading.scss
@@ -1,6 +1,8 @@
 .loading-page {
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
+    gap: 30px;
     justify-content: center;
     align-items: center;
     position: relative;
