--- a/src/app/settings/changecoins/changeCoins.scss
+++ b/src/app/settings/changecoins/changeCoins.scss
@@ -1,4 +1,4 @@
-.store {
+.change-coins {
    
     .header{
         background-color: var(--purple-color) !important;
@@ -44,7 +44,7 @@
         } 
       }
       .delete-update-btn {
-        width: 35%;
+        width: 50%;
 
       }
       @media only screen  and (max-width: 1200px) {
