--- a/src/components/loading/loading.scss
+++ b/src/components/loading/loading.scss
@@ -5,8 +5,23 @@
     gap: 30px;
     justify-content: center;
     align-items: center;
-    position: relative;
+    background: url("../../assets/photos/home.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    // position: relative;
     z-index: 100;
-    backdrop-filter: blur(20px); 
-    background-color: rgba(255, 255, 255, 0.8); 
+    // backdrop-filter: blur(20px); 
+    // background-color: rgba(255, 255, 255, 0.129); 
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        backdrop-filter: blur(15px);
+      }
 }
