--- a/src/components/loading/loading.scss
+++ b/src/components/loading/loading.scss
@@ -12,7 +12,7 @@
     background-attachment: fixed;
     // position: relative;
     z-index: 100;
-    // backdrop-filter: blur(20px); 
+    backdrop-filter: blur(20px); 
     // background-color: rgba(255, 255, 255, 0.129); 
     &::before {
         content: "";
@@ -21,7 +21,18 @@
         left: 0;
         width: 100%;
         height: 100%;
-
         backdrop-filter: blur(15px);
       }
+}
+.close-box{
+  width: 60%;
+  position: relative;
+  padding: 0 20px;
+  display: flex;
+  justify-content: end;
+  svg{
+    font-size: 1.5rem;
+    color: #fff;
+    cursor: pointer;
+  }
 }
