--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,11 +117,13 @@
   }
   .user-container {
     display: flex;
+    width: max-content; /* Set the width to fit the content */
+
     align-items: center;
     justify-content: center;
     background-color: #ffffff44;
     border-radius: 50px;
-    width: 152px;
+    /* width: 152px; */
     height: 35px;
     padding-right: 15px;
     gap: 7px;
