--- a/src/components/home/homepage.scss
+++ b/src/components/home/homepage.scss
@@ -28,46 +28,39 @@
     position: relative;
     z-index: 1;
   }
+ 
+  .high-z-index {
+    position: relative;
+    z-index: 1;
+  }
+
   .ticket-container {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #ffffff44;
     border-radius: 50px;
-    width: 153px;
-    height: 35px;
+    width: max-content; /* Set the width to fit the content */
     padding-right: 15px;
     gap: 7px;
-    position: relative;
-  }
-  .high-z-index {
-    position: relative;
-    z-index: 1;
-  }
-
   .ticket-prize {
     color: white;
-    width: 124px;
     height: 41px;
     margin-right: 20px;
-
-    h5 {
-      margin-left: 25px;
-      margin-bottom: 5px;
-    }
-
-    .ticket {
-      position: absolute;
-      left: 1px;
-      top: -1px;
-      border: 1px solid white;
-      border-radius: 50px;
-      background: white;
-      height: 41px;
-      width: 43px;
-    }
+    display: flex;
+    align-items: center;
   }
-
+  
+  .ticket {
+    border: 1px solid white;
+    border-radius: 50px;
+    background: white;
+    height: 41px;
+    width: 43px;
+    margin-right: 5px; /* Adjust the margin as needed */
+  }
+  }
+  
   .playNow {
      background-image: 
       linear-gradient(
