--- a/src/app/playground/playground.scss
+++ b/src/app/playground/playground.scss
@@ -5,44 +5,7 @@
     background-repeat: no-repeat; 
     background-size: cover; 
     background-attachment: fixed;
-//     .ticket-container {
-//       display: flex;
-//       align-items: center;
-//       justify-content: center;
-//       background-color: #ffffff44;
-//       border-radius: 50px;
-//       width: 153px;
-//       height: 35px;
-//       padding-right: 15px;
-//       gap: 7px;
-//       position: relative;
-   
-//     }
-// .ticket {  
-//   height: 33px;
-//   color: white;
-//   width: 100px;
-//   margin-right: 20px;
 
-//   h5{
-//     margin-left: 25px;
-//     margin-bottom: 5px;
-//   }
-
- 
-// .ticket-img {
-//   position: absolute;
-//   left: -6px;
-//   top: -1px;
-//   border: 1px solid white;
-//   border-radius: 50px;
-//   background: white;
-//   height: 33px;
-//   width: 33px;
-
-// }
- 
-// }
 
   .ticket-container {
     display: flex;
@@ -78,10 +41,15 @@
   border-radius: 25px;
   position: relative;
   padding: 8px 10px;
+  width: 145px;
   img{
     position: absolute;
-    top: -10px;
-    right: 51px;
+    top: -25px;
+    right: 50px;
+    width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  border: 1px solid white;
   }
   .x-player{
     color: var(--red-color) !important;
