--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,13 +117,11 @@
   }
   .user-container {
     display: flex;
-    width: max-content; /* Set the width to fit the content */
-
+    width: max-content;  
     align-items: center;
     justify-content: center;
     background-color: #ffffff44;
     border-radius: 50px;
-    /* width: 152px; */
     height: 35px;
     padding-right: 15px;
     gap: 7px;
@@ -136,8 +134,31 @@
 
     }
   }
-
-  .model-btn{
+.model-btn{
     background: linear-gradient(180deg, #37007B 0%, #4044A7 100% ) !important;
-
+}
+.not-found-page {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
+  background: url("../assets/photos/home.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  z-index: 100;
+  backdrop-filter: blur(20px); 
+  &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      backdrop-filter: blur(15px);
+    }
+ 
 }
