--- a/src/app/(private_route)/message/message.scss
+++ b/src/app/(private_route)/message/message.scss
@@ -1,5 +1,5 @@
 .message {
-  background: url("../../assets/photos/bg-layer.png");
+  background: url("../../../assets/photos/bg-layer.png");
   min-height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
@@ -7,7 +7,7 @@
   direction: rtl; 
   text-align: right; 
   .layer {
-    background: url("../../assets/photos/bgLayer.png");
+    background: url("../../../assets/photos/bgLayer.png");
     min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
