--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -5,4 +5,15 @@ img{
     width: 220px; 
 
 }
+
+   
+
+}  
+@media (max-width: 570px) {
+.footer{
+    height: 45px;
+    img{
+        height: 30px;
+    }
 }
+  }
