--- a/src/app/settings/store/store.scss
+++ b/src/app/settings/store/store.scss
@@ -26,6 +26,7 @@
         margin-bottom: 15px;
           .count{
               color: var(--red-color) !important;
+              width: fit-content;
           }
         .img-container {
           height: 57px;
