--- a/src/app/(private_route)/home/homepage.scss
+++ b/src/app/(private_route)/home/homepage.scss
@@ -137,7 +137,7 @@
       }
     }
   }
-  .logOut-btn , .login-btn{
+  .logOut-btn , .login-btn ,  .admin-btn{
     background: linear-gradient(180deg, #37007B 0%, #4044A7 100%) !important;
     padding: 15px !important;
    
