--- a/src/app/settings/changecoins/changeCoins.scss
+++ b/src/app/settings/changecoins/changeCoins.scss
@@ -12,35 +12,13 @@
     }
     .delete-btn{
         color: var(--red-color) !important;
+        border: none;
     
     }
-    .prize {
-        background-color: var(--purple-color) !important;
-        border-radius: 15px;
-        display: flex;
-        flex-direction: column;
-        width: 111px;
-        height: 169px;
-        padding: 10px 5px;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 15px;
-          .count{
-              color: var(--red-color) !important;
-          }
-    
-        .img{
-             height: 86px;
-    border-radius: 15px;
-    border: 3px solid white;
-    width: 86px;
-      
-        } 
-      }
-      .delete-update-btn {
-        width: 50%;
+    .update-btn {
+      border: none;
 
-      }
+    }
       @media only screen  and (max-width: 1200px) {
         .delete-update-btn  {
           width: 100%;
