--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -34,16 +34,14 @@
 }
 }
 
-// @media only screen and (max-width: 600px) {
-//   .title {
-//     .title-text {
-//       font-size: 22px;
-//       margin-right: 43px;
-//         }
+@media only screen and (max-width: 410px) {
+  .title {
+   
         
-//   img {
-//      height: auto;
-//   }
+  img {
+    margin-top: 20px;
+    height: 100%;
+   }
 
-//   }
-// }
+  }
+}
