--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,12 @@
   margin: 0;
   box-sizing: border-box;
 }
+body{
+  max-height: 100vh !important;
+}
+h5{
+  margin: 0 !important;
+}
 .rtl {
    direction: rtl; 
    text-align: right; 
@@ -112,9 +118,7 @@
     --shadow-y: 4px;
   }
 
-  body{
-    max-height: 100vh !important;
-  }
+ 
   .user-container {
     display: flex;
     width: max-content;  
