--- a/src/app/(private_route)/payment/payment.scss
+++ b/src/app/(private_route)/payment/payment.scss
@@ -37,7 +37,7 @@
   
   @media screen and (min-width: 1200px) {
     .paypal {
-      margin-top: -158px;  
+      margin-top: -155px;  
     }
   }
   
@@ -52,31 +52,40 @@
     border-radius: 20px;
 
   }
-  .css-iwcgw7-MuiFormLabel-root-MuiInputLabel-root {
-    color: white !important;
-  }
-  .css-1717ajk-MuiFormLabel-root-MuiInputLabel-root.Mui-focused {
-    color: white !important;
-  }
-  .css-1717ajk-MuiFormLabel-root-MuiInputLabel-root {
-    color: white !important;
-  }
-  .css-v4u5dn-MuiInputBase-root-MuiInput-root:after {
-    border-bottom: 2px solid white !important;
-  }
-  .css-v4u5dn-MuiInputBase-root-MuiInput-root::before {
-    border-bottom: 2px solid white !important;
-  }
-  .css-1x51dt5-MuiInputBase-input-MuiInput-input {
-    color: white;
-  }
+  // .css-iwcgw7-MuiFormLabel-root-MuiInputLabel-root {
+  //   color: white !important;
+  // }
+  // .css-1717ajk-MuiFormLabel-root-MuiInputLabel-root.Mui-focused {
+  //   color: white !important;
+  // }
+  // .css-1717ajk-MuiFormLabel-root-MuiInputLabel-root {
+  //   color: white !important;
+  // }
+  // .css-v4u5dn-MuiInputBase-root-MuiInput-root:after {
+  //   border-bottom: 2px solid white !important;
+  // }
+  // .css-v4u5dn-MuiInputBase-root-MuiInput-root::before {
+  //   border-bottom: 2px solid white !important;
+  // }
+
   .css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root.Mui-checked,
   .css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root.MuiCheckbox-indeterminate {
     color: var(--green-color) !important;
   }
   .css-1d1r5q-MuiFormHelperText-root {
-    color:white;
+    color:white !important;
+  }   
+  .css-1x51dt5-MuiInputBase-input-MuiInput-input {
+    color: white !important;
   }
+.css-1eed5fa-MuiInputBase-root-MuiInput-root::before {
+    border-bottom: 1px solid white !important;
+   
+}
+ 
+.css-aqpgxn-MuiFormLabel-root-MuiInputLabel-root {
+  color: white !important;
+}
   @media (min-width: 992px) {
     .justify-content-between-lg {
       justify-content: space-between !important;
