--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -42,6 +42,20 @@
     margin-top: 20px;
     height:77px;
    }
+   .title-text { 
+    margin-right: 35px
+  }
 
+
+  }
+}
+@media only screen and (max-width: 390px) {
+  .title {
+   
+        
+    .title-text { 
+      margin-right: 50px
+    }
+  
   }
 }
