--- a/src/app/(private_route)/payment/payment.scss
+++ b/src/app/(private_route)/payment/payment.scss
@@ -29,17 +29,17 @@
       }
     }
   }
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    .paypal {
-      margin-top: -130px;  
-    }
-  }
+  // @media screen and (min-width: 768px) and (max-width: 1199px) {
+  //   .paypal {
+  //     margin-top: -130px;  
+  //   }
+  // }
   
-  @media screen and (min-width: 1200px) {
-    .paypal {
-      margin-top: -155px;  
-    }
-  }
+  // @media screen and (min-width: 1200px) {
+  //   .paypal {
+  //     margin-top: -155px;  
+  //   }
+  // }
   
   .visa {
     display: flex;
