--- a/src/app/forgetpassword/forgetPassword.scss
+++ b/src/app/forgetpassword/forgetPassword.scss
@@ -19,6 +19,9 @@
         border-color: white !important;
 
     }
+    .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root {
+        color: white !important;
+    }
     .forget-btn{
         background: linear-gradient(180deg, #37007B 0%, #4044A7 100%);
         // padding: 15px !important; 
