--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -35,6 +35,10 @@ h5{
   text-decoration: none;
   color: black !important;
 }
+.link-white {
+  text-decoration: none;
+  color: white !important;
+}
 .red-color{
   color: var(--red-color) !important;
 }
