--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -16,6 +16,24 @@
   margin: 0;
   box-sizing: border-box;
 }
+h1{
+  font-size: 34px;
+}
+h2{
+  font-size: 32px;
+}
+h3{
+  font-size: 26px;
+}
+h4{
+  font-size: 22px;
+}
+h5{
+  font-size: 20px;
+}
+h6{
+  font-size: 18px;
+}
 body{
   max-height: 100vh !important;
 }
